--- a/kapitel/06_organisation.tex
+++ b/kapitel/06_organisation.tex
@@ -20,6 +20,17 @@ Das Unternehmen befindet sich in der Gründungsphase, wobei der Prototyp fertigg
 
 Die Aufgaben sind klar verteilt: Phillipp Atzler übernimmt als Geschäftsführer und Lead Developer die Bereiche Backend, Datenbank, Tests und DevOps. Maike Abel ist als Frontend Lead für UI/UX-Design, Frontend-Entwicklung und Dokumentation verantwortlich. Elisa Dörnbrak kümmert sich um Projektmanagement, QA, Kundenbetreuung und Koordination.
 
+\subsection{Organigramm}
+
+Die folgende Abbildung zeigt die Organisationsstruktur des Unternehmens:
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/Organigramm.png}
+    \caption{Organisationsstruktur der FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
+    \label{fig:organigramm}
+\end{figure}
+
 Bei Abwesenheit eines Gründers übernehmen die anderen beiden dessen Aufgaben. Die technische Dokumentation ermöglicht eine schnelle Einarbeitung und kritische Zugangsdaten sind sicher bei allen Gesellschaftern hinterlegt.
 
 \section{Mitarbeiter}
