--- a/kapitel/07_rechtsform.tex
+++ b/kapitel/07_rechtsform.tex
@@ -1,6 +1,8 @@
 \chapter{Rechtsform}
 
-\section{Gewählte Rechtsform und Begründung}
+\section{Firmenname und Rechtsform}
+
+Der vollständige Firmenname lautet \textbf{FreshGuard -- Atzler, Abel \& Dörnbrak GbR}. Diese Bezeichnung kombiniert den Produktnamen mit den Nachnamen aller drei Gesellschafter, wie es für eine GbR rechtlich erforderlich ist.
 
 Für den Start wurde die \textbf{GbR (Gesellschaft bürgerlichen Rechts)} als Rechtsform gewählt, wobei bei entsprechendem Wachstum eine Umwandlung in UG (haftungsbeschränkt) oder GmbH geplant ist.
 
