--- a/kapitel/09_finanzplan.tex
+++ b/kapitel/09_finanzplan.tex
@@ -42,6 +42,25 @@ Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 2
 
 Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
 
+\subsection{Monatliche Liquiditätsreserve}
+
+Die Liquiditätsreserve von 25.000 Euro dient als Sicherheitspuffer und wird wie folgt eingeplant:
+
+\begin{tabular}{lrrr}
+    \toprule
+    \textbf{Zeitraum} & \textbf{Reserve (Start)} & \textbf{Monatl. Veränderung} & \textbf{Reserve (Ende)} \\
+    \midrule
+    Jahr 1, Monat 1--6 & 25.000 \euro{} & -2.000 \euro{} & 13.000 \euro{} \\
+    Jahr 1, Monat 7--12 & 13.000 \euro{} & -1.500 \euro{} & 4.000 \euro{} \\
+    Jahr 2, Monat 1--6 & 4.000 \euro{} & -500 \euro{} & 1.000 \euro{} \\
+    Jahr 2, Monat 7--12 & 1.000 \euro{} & +1.000 \euro{} & 7.000 \euro{} \\
+    Jahr 3, Monat 1--12 & 7.000 \euro{} & +2.000 \euro{} & 31.000 \euro{} \\
+    \bottomrule
+\end{tabular}
+
+\vspace{0.5cm}
+In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht. Ab der zweiten Jahreshälfte von Jahr 2 beginnt der Wiederaufbau der Reserve durch steigende Einnahmen. Zum Ende von Jahr 3 wird eine komfortable Liquiditätsreserve von circa 31.000 Euro erwartet, die für unvorhergesehene Ausgaben und weiteres Wachstum zur Verfügung steht.
+
 \section{Ertragsvorschau}
 
 \begin{tabular}{lrrr}
