--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 % ============================================
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{FreshGuard - Businessplan}
+\fancyhead[L]{FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
 \fancyhead[R]{\leftmark}
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
