--- a/kapitel/06_organisation.tex
+++ b/kapitel/06_organisation.tex
@@ -24,7 +24,7 @@ Die Aufgaben sind klar verteilt: Phillipp Atzler übernimmt als Geschäftsführe
 
 Die folgende Abbildung zeigt die Organisationsstruktur des Unternehmens:
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{img/Organigramm.png}
     \caption{Organisationsstruktur der FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
