--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{enumitem}
+\usepackage{float}
 \usepackage{xcolor}
 \usepackage{helvet}
 \renewcommand{\familydefault}{\sfdefault}
@@ -34,8 +35,8 @@
 % ============================================
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
-\fancyhead[R]{\leftmark}
+\fancyhead[L]{\footnotesize FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
+\fancyhead[R]{\footnotesize \leftmark}
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
