--- a/kapitel/03_geschaeftsidee.tex
+++ b/kapitel/03_geschaeftsidee.tex
@@ -2,11 +2,13 @@
 
 \section{Produktbeschreibung und Kundennutzen}
 
-FreshGuard ist ein Webportal zur Bestands- und Haltbarkeitsverwaltung von Lebensmitteln, das Haushalten und Wohngemeinschaften eine einfache Lösung bietet, um ihre Vorräte zu verwalten und Verschwendung durch vergessene Mindesthaltbarkeitsdaten zu reduzieren. Die Anwendung ermöglicht die Erfassung von Artikeln mit Name, Mindesthaltbarkeitsdatum, Menge und Lagerort, bietet eine Haushalts-Verwaltung mit Einladungssystem, ein Dashboard mit Statistiken und Warnungen sowie ein flexibles Lizenz-System mit Free-, Basic- und Pro-Plänen.
-
-Das Alleinstellungsmerkmal von FreshGuard liegt in der echten Multi-User-Haushaltsverwaltung mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. Automatische Warnungen mit farblicher Kennzeichnung in Grün, Gelb und Rot machen auf ablaufende Produkte aufmerksam. Als browserbasierte Anwendung ist keine Installation erforderlich und die Plattform läuft responsiv auf allen Geräten. Dabei ist FreshGuard vollständig DSGVO-konform mit Serverstandort in Deutschland.
-
-Der Kundennutzen ist vielfältig: Weniger Lebensmittelverschwendung durch rechtzeitige Erinnerungen führt zu Kostenersparnis durch optimierten Verbrauch. Nutzer erhalten einen besseren Überblick über vorhandene Vorräte und können diese gemeinsam mit allen Haushaltsmitgliedern verwalten, was auch die Einkaufsplanung erleichtert und Zeit spart.
+FreshGuard ist ein Webportal zur Bestands- und Haltbarkeitsverwaltung von Lebensmitteln, das Haushalten und Wohngemeinschaften eine einfache Lösung bietet, um ihre Vorräte zu verwalten und Verschwendung durch vergessene Mindesthaltbarkeitsdaten zu reduzieren.
+Die Anwendung ermöglicht die Erfassung von Artikeln mit Name, Mindesthaltbarkeitsdatum, Menge und Lagerort, bietet eine Haushalts-Verwaltung mit Einladungssystem, ein Dashboard mit Statistiken und Warnungen sowie ein flexibles Lizenz-System mit Free-, Basic- und Pro-Plänen.
+Das Alleinstellungsmerkmal von FreshGuard liegt in der echten Multi-User-Haushaltsverwaltung mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. Automatische Warnungen mit farblicher Kennzeichnung in Grün, Gelb und Rot machen auf ablaufende Produkte aufmerksam.
+Als browserbasierte Anwendung ist keine Installation erforderlich und die Plattform läuft responsiv auf allen Geräten. 
+Dabei ist FreshGuard vollständig DSGVO-konform mit Serverstandort in Deutschland.
+Der Kundennutzen ist vielfältig: Weniger Lebensmittelverschwendung durch rechtzeitige Erinnerungen führt zu Kostenersparnis durch optimierten Verbrauch. 
+Nutzer erhalten einen besseren Überblick über vorhandene Vorräte und können diese gemeinsam mit allen Haushaltsmitgliedern verwalten, was auch die Einkaufsplanung erleichtert und Zeit spart.
 
 \section{Unternehmensziele}
 
