--- a/kapitel/04_markt_wettbewerb.tex
+++ b/kapitel/04_markt_wettbewerb.tex
@@ -2,7 +2,9 @@
 
 \section{Zielkunden}
 
-Die Zielkunden von FreshGuard sind private Haushalte und Wohngemeinschaften, die ihre Lebensmittelvorräte digital verwalten möchten. Der Fokus liegt primär auf dem deutschsprachigen Raum (DACH-Region), da der Serverstandort in Deutschland liegt und die Benutzeroberfläche deutschsprachig ist. Die Hauptzielgruppe sind technikaffine und umweltbewusste Personen im Alter von 25 bis 55 Jahren, die in Haushalten mit zwei bis sechs Personen leben -- also Paare, Familien und Wohngemeinschaften. Der Fokus liegt auf Nachhaltigkeit und bewusstem Konsum.
+Die Zielkunden von FreshGuard sind private Haushalte und Wohngemeinschaften, die ihre Lebensmittelvorräte digital verwalten möchten. 
+Der Fokus liegt primär auf dem deutschsprachigen Raum (DACH-Region), da der Serverstandort in Deutschland liegt und die Benutzeroberfläche deutschsprachig ist. Die Hauptzielgruppe sind technikaffine und umweltbewusste Personen im Alter von 25 bis 55 Jahren, die in Haushalten mit zwei bis sechs Personen leben -- also Paare, Familien und Wohngemeinschaften. 
+Der Fokus liegt auf Nachhaltigkeit und bewusstem Konsum.
 
 \begin{tabular}{ll}
     \toprule
@@ -14,11 +16,13 @@ Die Zielkunden von FreshGuard sind private Haushalte und Wohngemeinschaften, die
     Fokus & Nachhaltigkeit und bewusster Konsum \\
     \bottomrule
 \end{tabular}
-
 \vspace{0.5cm}
-Das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C), wodurch keine Abhängigkeit von einzelnen Großkunden besteht. Testnutzer aus dem persönlichen Umfeld während der Entwicklungsphase dienen als erste Referenzkunden.
 
-Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebensmittelvorräte, vergessene Mindesthaltbarkeitsdaten, Lebensmittelverschwendung und damit verbundene Kosten sowie mangelnde Koordination innerhalb des Haushalts. FreshGuard adressiert diese Probleme durch eine speziell für Haushalte mit mehreren Personen entwickelte Lösung, die einfach zu bedienen ist und keine Installation erfordert. Die DSGVO-Konformität mit deutschem Serverstandort schafft Vertrauen, während die faire Preisgestaltung mit kostenlosem Einstieg die Hürden niedrig hält.
+Das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C), wodurch keine Abhängigkeit von einzelnen Großkunden besteht. 
+Testnutzer aus dem persönlichen Umfeld während der Entwicklungsphase dienen als erste Referenzkunden.
+Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebensmittelvorräte, vergessene Mindesthaltbarkeitsdaten, Lebensmittelverschwendung und damit verbundene Kosten sowie mangelnde Koordination innerhalb des Haushalts. 
+FreshGuard adressiert diese Probleme durch eine speziell für Haushalte mit mehreren Personen entwickelte Lösung, die einfach zu bedienen ist und keine Installation erfordert. 
+Die DSGVO-Konformität mit deutschem Serverstandort schafft Vertrauen, während die faire Preisgestaltung mit kostenlosem Einstieg die Hürden niedrig hält.
 
 \begin{tabular}{lr}
     \toprule
@@ -32,18 +36,19 @@ Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebens
 
 \section{Wettbewerber}
 
-Am Markt existieren diverse Vorrats-Apps, darunter Bring! (mit Fokus auf Einkaufslisten), NoWaste (ähnliches Konzept), Our Groceries, Pantry Check sowie verschiedene kleinere MHD-Tracker-Apps. Die Preise der Konkurrenz bewegen sich meist im Bereich einer kostenlosen Basis-Version mit Premium-Features zwischen 2 und 5 Euro pro Monat.
-
-Die Stärken der Konkurrenten liegen in ihrer etablierten Nutzerbasis, der App-Store-Präsenz und der Verfügbarkeit nativer Apps. Ihre Schwächen sind jedoch, dass oft keine echte Haushalts-Kollaboration geboten wird, kein deutsches Hosting vorhanden ist (was zu DSGVO-Bedenken führt) und die Multi-User-Funktionen eingeschränkt sind.
-
-FreshGuard unterscheidet sich durch echte Multi-User-Haushalte mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. Als browserbasierte Lösung ist keine Installation erforderlich und die Plattform ist vollständig plattformunabhängig. Mit DSGVO-Konformität durch deutschen Serverstandort und transparenten Preisen im Freemium-Modell mit fairen Premium-Optionen grenzt sich FreshGuard klar von der Konkurrenz ab.
-
-Die eigenen Schwächen gegenüber Konkurrenten werden aktiv adressiert: Das Fehlen einer nativen App wird durch eine Progressive Web App (PWA) für ein App-ähnliches Erlebnis kompensiert. Die noch nicht etablierte Nutzerbasis soll durch Fokus auf das Alleinstellungsmerkmal der echten Multi-User-Haushalte aufgebaut werden. Die fehlende App-Store-Präsenz wird durch SEO und Social Media Marketing ausgeglichen.
+Am Markt existieren diverse Vorrats-Apps, darunter Bring! (mit Fokus auf Einkaufslisten), NoWaste (ähnliches Konzept), Our Groceries, Pantry Check sowie verschiedene kleinere MHD-Tracker-Apps. 
+Die Preise der Konkurrenz bewegen sich meist im Bereich einer kostenlosen Basis-Version mit Premium-Features zwischen 2 und 5 Euro pro Monat.
+Die Stärken der Konkurrenten liegen in ihrer etablierten Nutzerbasis, der App-Store-Präsenz und der Verfügbarkeit nativer Apps. 
+Ihre Schwächen sind jedoch, dass oft keine echte Haushalts-Kollaboration geboten wird, kein deutsches Hosting vorhanden ist (was zu DSGVO-Bedenken führt) und die Multi-User-Funktionen eingeschränkt sind.
+FreshGuard unterscheidet sich durch echte Multi-User-Haushalte mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. 
+Als browserbasierte Lösung ist keine Installation erforderlich und die Plattform ist vollständig plattformunabhängig. 
+Mit DSGVO-Konformität durch deutschen Serverstandort und transparenten Preisen im Freemium-Modell mit fairen Premium-Optionen grenzt sich FreshGuard klar von der Konkurrenz ab.
+Die eigenen Schwächen gegenüber Konkurrenten werden aktiv adressiert: Das Fehlen einer nativen App wird durch eine Progressive Web App (PWA) für ein App-ähnliches Erlebnis kompensiert. 
+Die noch nicht etablierte Nutzerbasis soll durch Fokus auf das Alleinstellungsmerkmal der echten Multi-User-Haushalte aufgebaut werden. 
+Die fehlende App-Store-Präsenz wird durch SEO und Social Media Marketing ausgeglichen.
 
 \section{Standort}
 
 Als rein digitales Produkt ist FreshGuard als Webanwendung online erreichbar und über jeden Browser weltweit zugänglich. Der physische Standort des Unternehmens ist daher sekundär, während der Server-Standort in Deutschland für Datenschutz und Vertrauen entscheidend ist.
-
 Die Vorteile dieses digitalen Standorts sind maximale Reichweite ohne Installations-Hürden, Plattformunabhängigkeit (Windows, Mac, Linux, iOS, Android), Skalierbarkeit ohne geografische Einschränkungen sowie das durch den deutschen Serverstandort geschaffene Vertrauen bei DACH-Kunden.
-
 Der Nachteil, dass eine Internetverbindung erforderlich ist und keine vollständige Offline-Funktionalität besteht, wird durch geplante PWA-Funktionen mit Service Worker für eingeschränkte Offline-Nutzung sowie durch mobile-optimiertes responsives Design ausgeglichen.
