--- a/kapitel/08_risiken.tex
+++ b/kapitel/08_risiken.tex
@@ -8,9 +8,11 @@ Auf dem Markt bieten sich weitere Chancen durch den wachsenden Markt für Nachha
 
 \section{Risiken und Absicherung}
 
-Die drei größten Risiken bestehen in der Konkurrenz durch etablierte Apps wie Bring! und NoWaste, die größere Marketing-Budgets und eine bestehende Nutzerbasis haben. Zudem könnte die Zahlungsbereitschaft gering ausfallen, wenn Nutzer die kostenlose Version bevorzugen und nicht auf Premium upgraden. Schließlich könnten technische Probleme wie Sicherheitsvorfälle oder Serverausfälle das Vertrauen der Nutzer beschädigen.
-
-Intern bestehen Risiken durch den möglichen Ausfall eines Gründers durch Krankheit oder Ausstieg, die mangelnde Marketing-Erfahrung im Team sowie die Überlastung durch die Mehrfachbelastung aus Entwicklung und Betrieb. Externe Risiken umfassen verschärfte Datenschutzvorschriften, eine wirtschaftliche Rezession, die die Ausgabebereitschaft reduziert, sowie technologischen Wandel durch neue Plattformen oder Standards.
+Die drei größten Risiken bestehen in der Konkurrenz durch etablierte Apps wie Bring! und NoWaste, die größere Marketing-Budgets und eine bestehende Nutzerbasis haben. 
+Zudem könnte die Zahlungsbereitschaft gering ausfallen, wenn Nutzer die kostenlose Version bevorzugen und nicht auf Premium upgraden. 
+Schließlich könnten technische Probleme wie Sicherheitsvorfälle oder Serverausfälle das Vertrauen der Nutzer beschädigen.
+Intern bestehen Risiken durch den möglichen Ausfall eines Gründers durch Krankheit oder Ausstieg, die mangelnde Marketing-Erfahrung im Team sowie die Überlastung durch die Mehrfachbelastung aus Entwicklung und Betrieb. 
+Externe Risiken umfassen verschärfte Datenschutzvorschriften, eine wirtschaftliche Rezession, die die Ausgabebereitschaft reduziert, sowie technologischen Wandel durch neue Plattformen oder Standards.
 
 \begin{tabular}{p{5cm}p{8cm}}
     \toprule
@@ -25,10 +27,7 @@ Intern bestehen Risiken durch den möglichen Ausfall eines Gründers durch Krank
 
 \section{SWOT-Analyse}
 
-Die \textbf{Stärken} von FreshGuard liegen in der technischen Kompetenz des Gründerteams, der echten Multi-User-Funktionalität als USP, der DSGVO-Konformität mit deutschem Hosting, der schlanken Kostenstruktur sowie dem fertigen MVP.
-
+Die \noindent \textbf{Stärken} von FreshGuard liegen in der technischen Kompetenz des Gründerteams, der echten Multi-User-Funktionalität als USP, der DSGVO-Konformität mit deutschem Hosting, der schlanken Kostenstruktur sowie dem fertigen MVP.
 Die \textbf{Schwächen} umfassen das Fehlen einer etablierten Marke und Nutzerbasis, die begrenzte Marketing-Erfahrung, das Fehlen einer nativen App (nur Web) sowie das begrenzte Startkapital.
-
 Die \textbf{Chancen} bestehen im wachsenden Nachhaltigkeits-Trend, der Zunahme von Mehrpersonenhaushalten, der Digitalisierung des Alltags sowie dem B2B-Potenzial bei Kantinen und in der Gastronomie.
-
 Die \textbf{Risiken} sind die etablierte Konkurrenz mit größerem Budget, die geringe Zahlungsbereitschaft für Premium, technische Sicherheitsrisiken sowie wirtschaftliche Unsicherheiten.
