--- a/kapitel/09_finanzplan.tex
+++ b/kapitel/09_finanzplan.tex
@@ -24,23 +24,26 @@ Die laufenden Kosten über 24 Monate betragen insgesamt 364.800 Euro und umfasse
 
 \section{Finanzierungsplan}
 
-Der Eigenkapitalanteil beträgt 75.000 Euro, wobei jeder der drei Gründer 25.000 Euro aus Ersparnissen einbringt. Der Fremdkapitalbedarf von insgesamt 300.000 Euro setzt sich aus einem Bankdarlehen über 200.000 Euro und einem Förderdarlehen der KfW über 100.000 Euro zusammen.
-
-Als Förderprogramme kommen das EXIST-Gründerstipendium für innovative technologiebasierte Gründungen, der KfW-Gründerkredit StartGeld bis 125.000 Euro ohne Eigenkapitalnachweis, der ERP-Gründerkredit Universell für größere Investitionen, der Gründungszuschuss bei Gründung aus einer Anstellung heraus sowie regionale Digitalbonus-Programme je nach Bundesland in Frage. Als mögliche Beteiligungskapitalgeber werden Business Angels im Bereich Nachhaltigkeit und FoodTech, der High-Tech Gründerfonds für innovative Startups, Venture Capital bei Skalierungsbedarf nach Jahr zwei sowie Crowdinvesting zur Einbindung der Community in Betracht gezogen.
-
-Alternativ besteht die Möglichkeit zum Leasing von Büromöbeln über 36 Monate für circa 300 Euro monatlich und IT-Hardware für circa 400 Euro monatlich. Als Sicherheiten können Bürgschaften der drei Gesellschafter, Verpfändung von Gesellschaftsanteilen, gegebenenfalls eine Bürgschaft durch die Bürgschaftsbank des Landes sowie ab Jahr zwei eine Forderungsabtretung aus Kundenverträgen dienen.
+Der Eigenkapitalanteil beträgt 75.000 Euro, wobei jeder der drei Gründer 25.000 Euro aus Ersparnissen einbringt. 
+Der Fremdkapitalbedarf von insgesamt 300.000 Euro setzt sich aus einem Bankdarlehen über 200.000 Euro und einem Förderdarlehen der KfW über 100.000 Euro zusammen.
+Als Förderprogramme kommen das EXIST-Gründerstipendium für innovative technologiebasierte Gründungen, der KfW-Gründerkredit StartGeld bis 125.000 Euro ohne Eigenkapitalnachweis, der ERP-Gründerkredit Universell für größere Investitionen, der Gründungszuschuss bei Gründung aus einer Anstellung heraus sowie regionale Digitalbonus-Programme je nach Bundesland in Frage. 
+Als mögliche Beteiligungskapitalgeber werden Business Angels im Bereich Nachhaltigkeit und FoodTech, der High-Tech Gründerfonds für innovative Startups, Venture Capital bei Skalierungsbedarf nach Jahr zwei sowie Crowdinvesting zur Einbindung der Community in Betracht gezogen.
+Alternativ besteht die Möglichkeit zum Leasing von Büromöbeln über 36 Monate für circa 300 Euro monatlich und IT-Hardware für circa 400 Euro monatlich. 
+Als Sicherheiten können Bürgschaften der drei Gesellschafter, Verpfändung von Gesellschaftsanteilen, gegebenenfalls eine Bürgschaft durch die Bürgschaftsbank des Landes sowie ab Jahr zwei eine Forderungsabtretung aus Kundenverträgen dienen.
 
 \section{Liquiditätsplan}
 
-Die monatlichen Einnahmen entwickeln sich über drei Jahre wie folgt: In Jahr eins, Monate eins bis sechs (Entwicklungsphase), werden keine Einnahmen erzielt. In den Monaten sieben bis zwölf (Soft-Launch) sind circa 2.000 Euro monatlich zu erwarten. In Jahr zwei (Wachstumsphase) steigen die Einnahmen auf circa 8.000 Euro monatlich und in Jahr drei (Skalierungsphase) auf circa 25.000 Euro monatlich.
-
-Die monatlichen Fixkosten belaufen sich auf circa 14.500 Euro und setzen sich zusammen aus Gehältern für drei Gründer (12.000 Euro), Büromiete (2.000 Euro), Hosting und Cloud (200 bis 1.000 Euro), Buchhaltung (150 Euro) und Versicherungen (100 Euro). Hinzu kommen variable Kosten für Marketing (500 bis 2.000 Euro monatlich) und Sonstiges (200 Euro monatlich), sodass die geschätzten Gesamtkosten bei 15.000 bis 17.000 Euro pro Monat liegen.
-
+Die monatlichen Einnahmen entwickeln sich über drei Jahre wie folgt: In Jahr eins, Monate eins bis sechs (Entwicklungsphase), werden keine Einnahmen erzielt. 
+In den Monaten sieben bis zwölf (Soft-Launch) sind circa 2.000 Euro monatlich zu erwarten. 
+In Jahr zwei (Wachstumsphase) steigen die Einnahmen auf circa 8.000 Euro monatlich und in Jahr drei (Skalierungsphase) auf circa 25.000 Euro monatlich.
+Die monatlichen Fixkosten belaufen sich auf circa 14.500 Euro und setzen sich zusammen aus Gehältern für drei Gründer (12.000 Euro), Büromiete (2.000 Euro), Hosting und Cloud (200 bis 1.000 Euro), Buchhaltung (150 Euro) und Versicherungen (100 Euro). 
+Hinzu kommen variable Kosten für Marketing (500 bis 2.000 Euro monatlich) und Sonstiges (200 Euro monatlich), sodass die geschätzten Gesamtkosten bei 15.000 bis 17.000 Euro pro Monat liegen.
 Die Investitionskosten in den ersten zwölf Monaten betragen insgesamt circa 48.000 Euro, davon 30.750 Euro im ersten Monat für Gründung und Ausstattung, je 1.000 Euro in den Monaten zwei bis sechs für Software und Tools sowie je 2.000 Euro in den Monaten sieben bis zwölf für Marketing und Server.
-
-Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 200.000 Euro bei fünf Prozent Zins und zehn Jahren Laufzeit circa 2.100 Euro monatlich. Das KfW-Darlehen über 100.000 Euro mit zwei Prozent Zins ist in den Jahren eins und zwei tilgungsfrei und kostet ab Jahr drei circa 1.100 Euro monatlich.
-
-Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
+Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 200.000 Euro bei fünf Prozent Zins und zehn Jahren Laufzeit circa 2.100 Euro monatlich. 
+Das KfW-Darlehen über 100.000 Euro mit zwei Prozent Zins ist in den Jahren eins und zwei tilgungsfrei und kostet ab Jahr drei circa 1.100 Euro monatlich.
+Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. 
+In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. 
+Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
 
 \subsection{Monatliche Liquiditätsreserve}
 
