--- a/kapitel/01_zusammenfassung.tex
+++ b/kapitel/01_zusammenfassung.tex
@@ -26,7 +26,7 @@ Der Gesamtkapitalbedarf für 24 Monate beträgt circa 375.000 Euro und setzt sic
 
 \section{Team und Ziele}
 
-Das Team besteht aus den drei Gründern, wobei bei entsprechendem Wachstum ein bis zwei zusätzliche Entwickler oder Support-Mitarbeiter hinzukommen sollen. Die Kernziele sind die Reduzierung der Lebensmittelverschwendung bei Nutzern um 15 Prozent, der rechtzeitige Verbrauch von mindestens 85 Prozent der erfassten Produkte sowie die kontinuierliche Verbesserung basierend auf Nutzerfeedback.
+Das Team besteht aus den drei Gründern, wobei bei entsprechendem Wachstum wenige zusätzliche Entwickler oder Support-Mitarbeiter hinzukommen sollen. Die Kernziele sind die Reduzierung der Lebensmittelverschwendung bei Nutzern um 15 Prozent, der rechtzeitige Verbrauch von mindestens 85 Prozent der erfassten Produkte sowie die kontinuierliche Verbesserung basierend auf Nutzerfeedback.
 
 \section{Risiken und Zeitplan}
 
