--- a/kapitel/02_gruenderperson.tex
+++ b/kapitel/02_gruenderperson.tex
@@ -4,7 +4,7 @@
 
 Das Gründerteam von FreshGuard besteht aus drei ausgebildeten Fachinformatikern der Anwendungsentwicklung, die über umfassende Erfahrung in PHP, HTML/CSS und JavaScript verfügen. Ihre technischen Fähigkeiten umfassen Datenbankdesign mit SQL (MySQL/MariaDB), MVC-Architektur und objektorientierte Programmierung sowie Versionsverwaltung mit Git. Im Bereich der Branchenkenntnisse decken sie sowohl Frontend- als auch Backend-Webentwicklung ab und beherrschen Software-Architektur und Design Patterns, Datenbankmanagement und -optimierung, IT-Sicherheit nach OWASP Top 10 sowie responsives Webdesign.
 
-Die kaufmännischen Qualifikationen stammen aus der Ausbildung und umfassen Grundkenntnisse in Kalkulation und Preisgestaltung, Projektmanagement, Kostenrechnung sowie Angebots- und Rechnungswesen. Im unternehmerischen Bereich verfügen die Gründer über Erfahrung in eigenständiger Projektplanung und -durchführung, agiler Softwareentwicklung, kundenorientiertem Denken und Problemlösungskompetenz. Die praktische Branchenerfahrung wurde durch Ausbildungsprojekte, die Entwicklung von Webanwendungen im beruflichen Umfeld sowie die kontinuierliche Beschäftigung mit aktuellen Technologien und Frameworks erworben.
+\noindent Die kaufmännischen Qualifikationen stammen aus der Ausbildung und umfassen Grundkenntnisse in Kalkulation und Preisgestaltung, Projektmanagement, Kostenrechnung sowie Angebots- und Rechnungswesen. Im unternehmerischen Bereich verfügen die Gründer über Erfahrung in eigenständiger Projektplanung und -durchführung, agiler Softwareentwicklung, kundenorientiertem Denken und Problemlösungskompetenz. Die praktische Branchenerfahrung wurde durch Ausbildungsprojekte, die Entwicklung von Webanwendungen im beruflichen Umfeld sowie die kontinuierliche Beschäftigung mit aktuellen Technologien und Frameworks erworben.
 
 \section{Stärken des Teams}
 
