--- a/kapitel/04_markt_wettbewerb.tex
+++ b/kapitel/04_markt_wettbewerb.tex
@@ -18,7 +18,7 @@ Der Fokus liegt auf Nachhaltigkeit und bewusstem Konsum.
 \end{tabular}
 \vspace{0.5cm}
 
-Das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C), wodurch keine Abhängigkeit von einzelnen Großkunden besteht. 
+\noindent Das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C), wodurch keine Abhängigkeit von einzelnen Großkunden besteht. 
 Testnutzer aus dem persönlichen Umfeld während der Entwicklungsphase dienen als erste Referenzkunden.
 Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebensmittelvorräte, vergessene Mindesthaltbarkeitsdaten, Lebensmittelverschwendung und damit verbundene Kosten sowie mangelnde Koordination innerhalb des Haushalts. 
 FreshGuard adressiert diese Probleme durch eine speziell für Haushalte mit mehreren Personen entwickelte Lösung, die einfach zu bedienen ist und keine Installation erfordert. 
