--- a/kapitel/05_marketing.tex
+++ b/kapitel/05_marketing.tex
@@ -23,7 +23,7 @@ FreshGuard verfolgt ein Freemium-Modell mit kostenlosem Basis-Plan und Premium-U
 \end{tabular}
 
 \vspace{0.5cm}
-Die laufenden Kosten für Hosting betragen circa 72 Euro pro Jahr und für die Domain circa 12 Euro pro Jahr, sodass der Break-Even bereits ab 10 zahlenden Nutzern erreicht wird. Die Preise orientieren sich an der Konkurrenz, wo 2 bis 5 Euro pro Monat üblich sind.
+\noindent Die laufenden Kosten für Hosting betragen circa 72 Euro pro Jahr und für die Domain circa 12 Euro pro Jahr, sodass der Break-Even bereits ab 10 zahlenden Nutzern erreicht wird. Die Preise orientieren sich an der Konkurrenz, wo 2 bis 5 Euro pro Monat üblich sind.
 
 \section{Vertrieb}
 
@@ -40,7 +40,7 @@ Die Vertriebskosten sind minimal, da der Vertrieb vollständig als Self-Service 
 \end{tabular}
 
 \vspace{0.5cm}
-Das Zielgebiet ist die DACH-Region (Deutschland, Österreich, Schweiz).
+\noindent Das Zielgebiet ist die DACH-Region (Deutschland, Österreich, Schweiz).
 
 \section{Werbung}
 
@@ -57,4 +57,4 @@ Kunden erfahren von FreshGuard über Social Media (Instagram, Facebook, TikTok),
 \end{tabular}
 
 \vspace{0.5cm}
-Der Marketing-Mix ist darauf ausgelegt, virales Wachstum durch das Freemium-Modell zu ermöglichen. Zufriedene Free-User werben neue Nutzer an und das Premium-Upgrade ist innerhalb der App prominent platziert. Das Nachhaltigkeits-Thema spricht gezielt die umweltbewusste Zielgruppe an.
+\noindent Der Marketing-Mix ist darauf ausgelegt, virales Wachstum durch das Freemium-Modell zu ermöglichen. Zufriedene Free-User werben neue Nutzer an und das Premium-Upgrade ist innerhalb der App prominent platziert. Das Nachhaltigkeits-Thema spricht gezielt die umweltbewusste Zielgruppe an.
