--- a/kapitel/06_organisation.tex
+++ b/kapitel/06_organisation.tex
@@ -16,7 +16,7 @@ FreshGuard wird von drei Gründern mit komplementären Fähigkeiten gegründet, 
 \end{tabular}
 
 \vspace{0.5cm}
-Das Unternehmen befindet sich in der Gründungsphase, wobei der Prototyp fertiggestellt ist und die Markteinführung für den 01. Februar 2026 geplant ist.
+\noindent Das Unternehmen befindet sich in der Gründungsphase, wobei der Prototyp fertiggestellt ist und die Markteinführung für den 01. Februar 2026 geplant ist.
 Die Aufgaben sind klar verteilt: Phillipp Atzler übernimmt als Geschäftsführer und Lead Developer die Bereiche Backend, Datenbank, Tests und DevOps. Maike Abel ist als Frontend Lead für UI/UX-Design, Frontend-Entwicklung und Dokumentation verantwortlich. Elisa Dörnbrak kümmert sich um Projektmanagement, QA, Kundenbetreuung und Koordination.
 
 \subsection{Organigramm}
@@ -30,7 +30,7 @@ Die folgende Abbildung zeigt die Organisationsstruktur des Unternehmens:
     \label{fig:organigramm}
 \end{figure}
 
-Bei Abwesenheit eines Gründers übernehmen die anderen beiden dessen Aufgaben. Die technische Dokumentation ermöglicht eine schnelle Einarbeitung und kritische Zugangsdaten sind sicher bei allen Gesellschaftern hinterlegt.
+\noindent Bei Abwesenheit eines Gründers übernehmen die anderen beiden dessen Aufgaben. Die technische Dokumentation ermöglicht eine schnelle Einarbeitung und kritische Zugangsdaten sind sicher bei allen Gesellschaftern hinterlegt.
 
 \section{Mitarbeiter}
 
@@ -47,7 +47,7 @@ Zusätzliche Mitarbeiter werden erst eingestellt, wenn Gewinne fließen und es s
 \end{tabular}
 
 \vspace{0.5cm}
-Neue Mitarbeiter werden durch interne Einarbeitung in die Codebasis, Dokumentation aller Prozesse und Workflows sowie Pair-Programming mit erfahrenen Gründern geschult.
+\noindent Neue Mitarbeiter werden durch interne Einarbeitung in die Codebasis, Dokumentation aller Prozesse und Workflows sowie Pair-Programming mit erfahrenen Gründern geschult.
 
 \section{Berater und Unterstützer}
 
