--- a/kapitel/07_rechtsform.tex
+++ b/kapitel/07_rechtsform.tex
@@ -4,11 +4,11 @@
 
 Der vollständige Firmenname lautet \textbf{FreshGuard -- Atzler, Abel \& Dörnbrak GbR}. Diese Bezeichnung kombiniert den Produktnamen mit den Nachnamen aller drei Gesellschafter, wie es für eine GbR rechtlich erforderlich ist.
 
-Für den Start wurde die \textbf{GbR (Gesellschaft bürgerlichen Rechts)} als Rechtsform gewählt, wobei bei entsprechendem Wachstum eine Umwandlung in UG (haftungsbeschränkt) oder GmbH geplant ist.
+\noindent Für den Start wurde die \textbf{GbR (Gesellschaft bürgerlichen Rechts)} als Rechtsform gewählt, wobei bei entsprechendem Wachstum eine Umwandlung in UG (haftungsbeschränkt) oder GmbH geplant ist.
 
-Die Vorteile der GbR liegen in der einfachen Gründung ohne Notar und Handelsregistereintrag, den geringen Kosten von nur circa 30 bis 50 Euro für die Gewerbeanmeldung, dem fehlenden Erfordernis einer Mindesteinlage, der flexiblen Gestaltung durch einen frei verhandelbaren Gesellschaftsvertrag sowie der Möglichkeit zum schnellen Start innerhalb weniger Tage.
+\noindent Die Vorteile der GbR liegen in der einfachen Gründung ohne Notar und Handelsregistereintrag, den geringen Kosten von nur circa 30 bis 50 Euro für die Gewerbeanmeldung, dem fehlenden Erfordernis einer Mindesteinlage, der flexiblen Gestaltung durch einen frei verhandelbaren Gesellschaftsvertrag sowie der Möglichkeit zum schnellen Start innerhalb weniger Tage.
 
-Die Nachteile sind die persönliche Haftung der Gesellschafter, die fehlende Eintragungsmöglichkeit im Handelsregister sowie eine begrenzte Außenwirkung bei Geschäftspartnern. Bei Erreichen eines nachhaltigen Wachstums ab circa 50.000 Euro Jahresumsatz ist daher die Umwandlung in eine UG (haftungsbeschränkt) oder die direkte Gründung einer GmbH vorgesehen.
+\noindent Die Nachteile sind die persönliche Haftung der Gesellschafter, die fehlende Eintragungsmöglichkeit im Handelsregister sowie eine begrenzte Außenwirkung bei Geschäftspartnern. Bei Erreichen eines nachhaltigen Wachstums ab circa 50.000 Euro Jahresumsatz ist daher die Umwandlung in eine UG (haftungsbeschränkt) oder die direkte Gründung einer GmbH vorgesehen.
 
 \section{Gesellschafterstruktur und Haftung}
 
@@ -23,12 +23,12 @@ Die Nachteile sind die persönliche Haftung der Gesellschafter, die fehlende Ein
 \end{tabular}
 
 \vspace{0.5cm}
-Phillipp Atzler erhält 40 Prozent als Geschäftsführer mit erhöhter Verantwortung, während Maike Abel und Elisa Dörnbrak je 30 Prozent als gleichberechtigte Gesellschafterinnen erhalten. Diese Verteilung verhindert Pattsituationen bei Abstimmungen.
+\noindent Phillipp Atzler erhält 40 Prozent als Geschäftsführer mit erhöhter Verantwortung, während Maike Abel und Elisa Dörnbrak je 30 Prozent als gleichberechtigte Gesellschafterinnen erhalten. Diese Verteilung verhindert Pattsituationen bei Abstimmungen.
 
-Bei der GbR haften alle Gesellschafter persönlich und unbeschränkt mit ihrem Privatvermögen. Dies wird akzeptiert, da das Geschäftsmodell als Software-as-a-Service risikoarm ist, keine hohen Verbindlichkeiten geplant sind und bei entsprechendem Wachstum eine Umwandlung in eine haftungsbeschränkte Rechtsform erfolgt.
+\noindent Bei der GbR haften alle Gesellschafter persönlich und unbeschränkt mit ihrem Privatvermögen. Dies wird akzeptiert, da das Geschäftsmodell als Software-as-a-Service risikoarm ist, keine hohen Verbindlichkeiten geplant sind und bei entsprechendem Wachstum eine Umwandlung in eine haftungsbeschränkte Rechtsform erfolgt.
 
 \section{Gesellschaftsvertrag}
 
 Die GbR ermöglicht eine flexible Zusammenarbeit, bei der alle Gesellschafter in Entscheidungen eingebunden sind. Elisa Dörnbrak fungiert bei Meinungsverschiedenheiten als Mediatorin.
 
-Die wesentlichen Regelungen im Gesellschaftsvertrag umfassen folgende Punkte: Phillipp Atzler ist als alleinvertretungsberechtigter Geschäftsführer eingesetzt. Die Gewinnverteilung erfolgt entsprechend der Gesellschaftsanteile (40/30/30). Wichtige Entscheidungen werden mit Zweidrittel-Mehrheit getroffen. Für ausscheidende Gesellschafter gilt eine Kündigungsfrist von sechs Monaten. Während der Gesellschaftszugehörigkeit besteht ein Wettbewerbsverbot. Im Streitfall ist vor einem Gerichtsverfahren eine Mediation vorgeschrieben.
+\noindent Die wesentlichen Regelungen im Gesellschaftsvertrag umfassen folgende Punkte: Phillipp Atzler ist als alleinvertretungsberechtigter Geschäftsführer eingesetzt. Die Gewinnverteilung erfolgt entsprechend der Gesellschaftsanteile (40/30/30). Wichtige Entscheidungen werden mit Zweidrittel-Mehrheit getroffen. Für ausscheidende Gesellschafter gilt eine Kündigungsfrist von sechs Monaten. Während der Gesellschaftszugehörigkeit besteht ein Wettbewerbsverbot. Im Streitfall ist vor einem Gerichtsverfahren eine Mediation vorgeschrieben.
