--- a/kapitel/09_finanzplan.tex
+++ b/kapitel/09_finanzplan.tex
@@ -20,7 +20,7 @@ Die einmaligen Kosten für Gründung und Ausstattung belaufen sich auf insgesamt
 \end{tabular}
 
 \vspace{0.5cm}
-Die laufenden Kosten über 24 Monate betragen insgesamt 364.800 Euro und umfassen Büromiete inklusive Nebenkosten (48.000 Euro), Gehälter für drei Gründer (288.000 Euro), Hosting und Cloud-Infrastruktur (4.800 Euro), Marketing und Werbung (12.000 Euro), Buchhaltung und Steuerberater (3.600 Euro), Versicherungen (2.400 Euro) sowie Sonstiges wie Reisen und Fortbildung (6.000 Euro). Hinzu kommt eine Liquiditätsreserve von 25.000 Euro, sodass der Gesamtkapitalbedarf circa 375.000 Euro beträgt.
+\noindent Die laufenden Kosten über 24 Monate betragen insgesamt 364.800 Euro und umfassen Büromiete inklusive Nebenkosten (48.000 Euro), Gehälter für drei Gründer (288.000 Euro), Hosting und Cloud-Infrastruktur (4.800 Euro), Marketing und Werbung (12.000 Euro), Buchhaltung und Steuerberater (3.600 Euro), Versicherungen (2.400 Euro) sowie Sonstiges wie Reisen und Fortbildung (6.000 Euro). Hinzu kommt eine Liquiditätsreserve von 25.000 Euro, sodass der Gesamtkapitalbedarf circa 375.000 Euro beträgt.
 
 \section{Finanzierungsplan}
 
@@ -62,7 +62,7 @@ Die Liquiditätsreserve von 25.000 Euro dient als Sicherheitspuffer und wird wie
 \end{tabular}
 
 \vspace{0.5cm}
-In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht. Ab der zweiten Jahreshälfte von Jahr 2 beginnt der Wiederaufbau der Reserve durch steigende Einnahmen. Zum Ende von Jahr 3 wird eine komfortable Liquiditätsreserve von circa 31.000 Euro erwartet, die für unvorhergesehene Ausgaben und weiteres Wachstum zur Verfügung steht.
+\noindent In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht. Ab der zweiten Jahreshälfte von Jahr 2 beginnt der Wiederaufbau der Reserve durch steigende Einnahmen. Zum Ende von Jahr 3 wird eine komfortable Liquiditätsreserve von circa 31.000 Euro erwartet, die für unvorhergesehene Ausgaben und weiteres Wachstum zur Verfügung steht.
 
 \section{Ertragsvorschau}
 
@@ -77,7 +77,7 @@ In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht
 \end{tabular}
 
 \vspace{0.5cm}
-Der Break-Even wird voraussichtlich Mitte Jahr drei erreicht. Der kumulierte Verlust bis zum Break-Even beträgt circa 300.000 Euro und wird durch Eigenkapital (75.000 Euro) sowie Fremdkapital (300.000 Euro) gedeckt.
+\noindent Der Break-Even wird voraussichtlich Mitte Jahr drei erreicht. Der kumulierte Verlust bis zum Break-Even beträgt circa 300.000 Euro und wird durch Eigenkapital (75.000 Euro) sowie Fremdkapital (300.000 Euro) gedeckt.
 
 \section{Informationsquellen zur Finanzierung}
 
