--- a/kapitel/09_finanzplan.tex
+++ b/kapitel/09_finanzplan.tex
@@ -2,48 +2,55 @@
 
 \section{Kapitalbedarfsplan}
 
-Die einmaligen Kosten für Gründung und Ausstattung belaufen sich auf insgesamt 30.750 Euro. Diese setzen sich zusammen aus 50 Euro für die Gewerbeanmeldung der GbR, 500 Euro für Notarkosten für den Gesellschaftsvertrag, 15.000 Euro für Büroausstattung mit drei Arbeitsplätzen, 12.000 Euro für Hardware (drei Entwickler-PCs und Server), 3.000 Euro für Software-Lizenzen (IDE, Design-Tools) sowie 200 Euro für Domain und SSL-Zertifikate.
-
 \begin{tabular}{lr}
     \toprule
-    \textbf{Position} & \textbf{Betrag} \\
+    \textbf{Investitionen} \\
+    \midrule
+    Büroausstattung für drei Arbeitsplätze & 15.000 \euro{} \\
+    Hardware(Computers und Server) & 12.000 \euro{} \\
+    Software-Lizenzen & 3.000 \euro{} \\
+    Domain \& SSL-Zertifikat & 200 \euro{} \\
+    \midrule
+    \textbf{Gründungsnebenkosten} \\
     \midrule
     Gewerbeanmeldung GbR & 50 \euro{} \\
-    Notarkosten (Gesellschaftsvertrag) & 500 \euro{} \\
-    Büroausstattung (3 Arbeitsplätze) & 15.000 \euro{} \\
-    Hardware (3$\times$ Entwickler-PCs, Server) & 12.000 \euro{} \\
-    Software-Lizenzen (IDE, Design-Tools) & 3.000 \euro{} \\
-    Domain \& SSL-Zertifikate & 200 \euro{} \\
+    Notarkosten Gesellschaftsvertrag & 500 \euro{} \\
     \midrule
-    \textbf{Summe einmalige Kosten} & \textbf{30.750 \euro{}} \\
+    \textbf{Kosten der Produktion für 24 Monate} \\
+    \midrule
+    Miete und Nebenkosten Büro (24 Monate) & 48.000 \euro{} \\
+    Gehälter für drei Gründer (24 Monate) & 288.000 \euro{} \\
+    Hosting und Cloud-Infrastruktur (24 Monate) & 4.800 \euro{} \\
+    Marketing(24 Monate) & 12.000 \euro{} \\
+    Buchhaltung und Steuerberater (24 Monate) & 3.600 \euro{} \\
+    Versicherungen (24 Monate) & 2.400 \euro{} \\
+    \midrule
+    \textbf{Summe einmalige Kosten} & \textbf{389.550 \euro{}} \\
     \bottomrule
 \end{tabular}
 
 \vspace{0.5cm}
-\noindent Die laufenden Kosten über 24 Monate betragen insgesamt 364.800 Euro und umfassen Büromiete inklusive Nebenkosten (48.000 Euro), Gehälter für drei Gründer (288.000 Euro), Hosting und Cloud-Infrastruktur (4.800 Euro), Marketing und Werbung (12.000 Euro), Buchhaltung und Steuerberater (3.600 Euro), Versicherungen (2.400 Euro) sowie Sonstiges wie Reisen und Fortbildung (6.000 Euro). Hinzu kommt eine Liquiditätsreserve von 25.000 Euro, sodass der Gesamtkapitalbedarf circa 375.000 Euro beträgt.
+\noindent Der Gesamtkapitalbedarf circa 389.550 Euro beträgt. Dieser setzt sich aus den einmaligen Gründungskosten und den laufenden Kosten für die ersten 24 Monate zusammen, bis voraussichtlich der Break-Even erreicht wird.
 
 \section{Finanzierungsplan}
 
-Der Eigenkapitalanteil beträgt 75.000 Euro, wobei jeder der drei Gründer 25.000 Euro aus Ersparnissen einbringt. 
-Der Fremdkapitalbedarf von insgesamt 300.000 Euro setzt sich aus einem Bankdarlehen über 200.000 Euro und einem Förderdarlehen der KfW über 100.000 Euro zusammen.
-Als Förderprogramme kommen das EXIST-Gründerstipendium für innovative technologiebasierte Gründungen, der KfW-Gründerkredit StartGeld bis 125.000 Euro ohne Eigenkapitalnachweis, der ERP-Gründerkredit Universell für größere Investitionen, der Gründungszuschuss bei Gründung aus einer Anstellung heraus sowie regionale Digitalbonus-Programme je nach Bundesland in Frage. 
-Als mögliche Beteiligungskapitalgeber werden Business Angels im Bereich Nachhaltigkeit und FoodTech, der High-Tech Gründerfonds für innovative Startups, Venture Capital bei Skalierungsbedarf nach Jahr zwei sowie Crowdinvesting zur Einbindung der Community in Betracht gezogen.
-Alternativ besteht die Möglichkeit zum Leasing von Büromöbeln über 36 Monate für circa 300 Euro monatlich und IT-Hardware für circa 400 Euro monatlich. 
-Als Sicherheiten können Bürgschaften der drei Gesellschafter, Verpfändung von Gesellschaftsanteilen, gegebenenfalls eine Bürgschaft durch die Bürgschaftsbank des Landes sowie ab Jahr zwei eine Forderungsabtretung aus Kundenverträgen dienen.
+Der Eigenkapitalanteil beträgt 75.000 Euro, wobei jeder der drei Gründer 25.000 Euro aus Ersparnissen einbringt. Der Fremdkapitalbedarf von insgesamt 389.550 Euro setzt sich aus einem Bankdarlehen über 200.000 Euro und einem Förderdarlehen der KfW über 100.000 Euro zusammen.
+
+Als Förderprogramme kommen das EXIST-Gründerstipendium für innovative technologiebasierte Gründungen, der KfW-Gründerkredit StartGeld bis 125.000 Euro ohne Eigenkapitalnachweis, der ERP-Gründerkredit Universell für größere Investitionen, der Gründungszuschuss bei Gründung aus einer Anstellung heraus sowie regionale Digitalbonus-Programme je nach Bundesland in Frage. Als mögliche Beteiligungskapitalgeber werden Business Angels im Bereich Nachhaltigkeit und FoodTech, der High-Tech Gründerfonds für innovative Startups, Venture Capital bei Skalierungsbedarf nach Jahr zwei sowie Crowdinvesting zur Einbindung der Community in Betracht gezogen.
+
+Alternativ besteht die Möglichkeit zum Leasing von Büromöbeln über 36 Monate für circa 300 Euro monatlich und IT-Hardware für circa 400 Euro monatlich. Als Sicherheiten können Bürgschaften der drei Gesellschafter, Verpfändung von Gesellschaftsanteilen, gegebenenfalls eine Bürgschaft durch die Bürgschaftsbank des Landes sowie ab Jahr zwei eine Forderungsabtretung aus Kundenverträgen dienen.
 
 \section{Liquiditätsplan}
 
-Die monatlichen Einnahmen entwickeln sich über drei Jahre wie folgt: In Jahr eins, Monate eins bis sechs (Entwicklungsphase), werden keine Einnahmen erzielt. 
-In den Monaten sieben bis zwölf (Soft-Launch) sind circa 2.000 Euro monatlich zu erwarten. 
-In Jahr zwei (Wachstumsphase) steigen die Einnahmen auf circa 8.000 Euro monatlich und in Jahr drei (Skalierungsphase) auf circa 25.000 Euro monatlich.
-Die monatlichen Fixkosten belaufen sich auf circa 14.500 Euro und setzen sich zusammen aus Gehältern für drei Gründer (12.000 Euro), Büromiete (2.000 Euro), Hosting und Cloud (200 bis 1.000 Euro), Buchhaltung (150 Euro) und Versicherungen (100 Euro). 
-Hinzu kommen variable Kosten für Marketing (500 bis 2.000 Euro monatlich) und Sonstiges (200 Euro monatlich), sodass die geschätzten Gesamtkosten bei 15.000 bis 17.000 Euro pro Monat liegen.
+Die monatlichen Einnahmen entwickeln sich über drei Jahre wie folgt: In Jahr eins, Monate eins bis sechs (Entwicklungsphase), werden keine Einnahmen erzielt. In den Monaten sieben bis zwölf (Soft-Launch) sind circa 2.000 Euro monatlich zu erwarten. In Jahr zwei (Wachstumsphase) steigen die Einnahmen auf circa 8.000 Euro monatlich und in Jahr drei (Skalierungsphase) auf circa 25.000 Euro monatlich.
+
+Die monatlichen Fixkosten belaufen sich auf circa 14.500 Euro und setzen sich zusammen aus Gehältern für drei Gründer (12.000 Euro), Büromiete (2.000 Euro), Hosting und Cloud (200 bis 1.000 Euro), Buchhaltung (150 Euro) und Versicherungen (100 Euro). Hinzu kommen variable Kosten für Marketing (500 bis 2.000 Euro monatlich) und Sonstiges (200 Euro monatlich), sodass die geschätzten Gesamtkosten bei 15.000 bis 17.000 Euro pro Monat liegen.
+
 Die Investitionskosten in den ersten zwölf Monaten betragen insgesamt circa 48.000 Euro, davon 30.750 Euro im ersten Monat für Gründung und Ausstattung, je 1.000 Euro in den Monaten zwei bis sechs für Software und Tools sowie je 2.000 Euro in den Monaten sieben bis zwölf für Marketing und Server.
-Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 200.000 Euro bei fünf Prozent Zins und zehn Jahren Laufzeit circa 2.100 Euro monatlich. 
-Das KfW-Darlehen über 100.000 Euro mit zwei Prozent Zins ist in den Jahren eins und zwei tilgungsfrei und kostet ab Jahr drei circa 1.100 Euro monatlich.
-Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. 
-In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. 
-Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
+
+Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 200.000 Euro bei fünf Prozent Zins und zehn Jahren Laufzeit circa 2.100 Euro monatlich. Das KfW-Darlehen über 100.000 Euro mit zwei Prozent Zins ist in den Jahren eins und zwei tilgungsfrei und kostet ab Jahr drei circa 1.100 Euro monatlich.
+
+Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
 
 \subsection{Monatliche Liquiditätsreserve}
 
@@ -62,7 +69,7 @@ Die Liquiditätsreserve von 25.000 Euro dient als Sicherheitspuffer und wird wie
 \end{tabular}
 
 \vspace{0.5cm}
-\noindent In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht. Ab der zweiten Jahreshälfte von Jahr 2 beginnt der Wiederaufbau der Reserve durch steigende Einnahmen. Zum Ende von Jahr 3 wird eine komfortable Liquiditätsreserve von circa 31.000 Euro erwartet, die für unvorhergesehene Ausgaben und weiteres Wachstum zur Verfügung steht.
+In der kritischen Anlaufphase (Jahr 1) wird die Reserve planmäßig aufgebraucht. Ab der zweiten Jahreshälfte von Jahr 2 beginnt der Wiederaufbau der Reserve durch steigende Einnahmen. Zum Ende von Jahr 3 wird eine komfortable Liquiditätsreserve von circa 31.000 Euro erwartet, die für unvorhergesehene Ausgaben und weiteres Wachstum zur Verfügung steht.
 
 \section{Ertragsvorschau}
 
@@ -77,7 +84,7 @@ Die Liquiditätsreserve von 25.000 Euro dient als Sicherheitspuffer und wird wie
 \end{tabular}
 
 \vspace{0.5cm}
-\noindent Der Break-Even wird voraussichtlich Mitte Jahr drei erreicht. Der kumulierte Verlust bis zum Break-Even beträgt circa 300.000 Euro und wird durch Eigenkapital (75.000 Euro) sowie Fremdkapital (300.000 Euro) gedeckt.
+Der Break-Even wird voraussichtlich Mitte Jahr drei erreicht. Der kumulierte Verlust bis zum Break-Even beträgt circa 300.000 Euro und wird durch Eigenkapital (75.000 Euro) sowie Fremdkapital (300.000 Euro) gedeckt.
 
 \section{Informationsquellen zur Finanzierung}
 
